--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -28,4 +28,4 @@ jobs:
         with:
           context: .
           push: true   # Set to false if you don't want to push the image
-          tags: rabeeht2/demo:latest
+          tags: rabeeht2/sample:latest
