--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,31 +1,26 @@
-name: Build and (optionally) Push Docker Image
+name: Build and Push Docker Image
 
 on:
   push:
     branches:
-      - master
+      - main  # Change this if using a different branch
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # If you want to push your image to Docker Hub, make sure to add your Docker Hub credentials
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Build Docker Image
+      run: docker build -t my-dockerhub-username/my-app:latest .
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true   # Set to false if you don't want to push the image
-          tags: rabeeht2/sample:latest
+    - name: Push Docker Image
+      run: docker push my-dockerhub-username/my-app:latest
