--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main  # Change this if using a different branch
+      - '*'  # Change this if using a different branch
 
 jobs:
   build-and-push:
